# clue-dictionary-client

./: ClueJS.md  ProjectHome.md  Todo.md
clue/: Makefile.am  README  TODO  accents.h  clue.cc  clue.h  cluerecord.cc  install.c  libclue.c  mapping.c
clue/bindings/: Makefile.am  clue.i
clue/data/: Makefile.am
clue2/: clue.py  wordcluster.dot
clue2/webif-js/: clue  index.html  yui
emhpy/: __init__.py  options.py  terminal.py
trunk/clue/: ChangeLog  INSTALL  autogen.sh  clue.1.in  cluefile.cc  common.c  configure.ac  test.py
trunk/emhpy/: singleton.py
wiki/: ClueJS.wiki  Todo.wiki
